# bellronos

./: .gitignore  Cargo.toml  README.md  dependencies.bellande  dependencies.txt  make_rust_executable.bellos  make_rust_executable.sh
bellronos_file/: advanced_features.bellronos  classes.bellronos  control_flow.bellronos  data_structures.bellronos  error_handling.bellronos  file_handling.bellronos  functions.bellronos  hello_world.bellronos  languages_handling.bellronos  variables_operators.bellronos
src/: bellronos.rs
src/ast/: ast.rs
src/error/: error.rs
src/interop/: interop.rs
src/interpreter/: interpreter.rs
src/lexer/: lexer.rs
src/package_manager/: package_manager.rs
src/parser/: parser.rs
src/standard_library/: standard_library.rs
src/type_system/: type_system.rs
